# turbo-term

./: .gitignore  README.md  debug_model.py  main.py  optimize_benchmark.py  pyproject.toml  ui.py  ui_optimized.py
src/: __init__.py  cli.py
