[project]
name = "z-image-turbo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers @ git+https://github.com/huggingface/diffusers",
    "gradio>=5.0.0",
    "pillow>=12.0.0",
    "torch>=2.9.1",
    "torchao>=0.7.0",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
